#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

#All exported headers
nobase_include_HEADERS=opx/nas_qos_switch.h opx/nas_qos_queue.h opx/nas_qos_buffer_profile.h opx/nas_qos_common.h opx/nas_qos_cps_buffer_pool.h opx/nas_qos_cps_priority_group.h opx/nas_qos_policer.h opx/nas_qos_cps_port_ingress.h opx/nas_qos_cps_queue.h opx/nas_qos_cps_scheduler_group.h opx/nas_qos_buffer_pool.h opx/nas_qos_switch_list.h opx/nas_qos_cps_buffer_profile.h opx/nas_qos_cps_port_egress.h opx/nas_qos_cps_policer.h opx/nas_qos_map.h opx/nas_qos_scheduler.h opx/nas_qos_cps_map.h opx/nas_qos_priority_group.h opx/nas_qos_map_util.h opx/nas_qos_cps_wred.h opx/nas_qos_cps.h opx/nas_qos_port_ingress.h opx/nas_qos_map_entry.h opx/nas_qos_init.h opx/nas_qos_port_egress.h opx/nas_qos_cps_scheduler.h opx/nas_qos_wred.h opx/nas_qos_scheduler_group.h \
	opx/nas_qos_cps_port_pool.h \
	opx/nas_qos_port_pool.h
